--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -4,15 +4,15 @@
     align-items: center;
     flex-wrap: wrap;
     height: 97vh;
-    margin-top: 20px;
+    margin-top: -15px;
 }
 
 .container-category .box{
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 150px;
     border-radius: 10px;
     background: #fff;
-    margin: 10px;
+    margin: 20px;
     position: relative;
     box-shadow: 0px 0px 15px black;
 }
@@ -21,8 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    padding: 15px;
+    flex-direction: column; 
     margin-left: auto;
     margin-right: auto;
     padding: 70px 0;
@@ -39,21 +38,37 @@
     color: black;
 }
 
-
-
 .box img {
-    width: 100px;
+    width: 60px;
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
 }
+.text-category {
+    margin: 30px 50px 0 50px;
+}
 
+.text-category  h1{
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.text-category  h2{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.text-category  h3{
+    font-size: 20px;
+   
+}
 
 @media (hover : hover) {
     .container-category .box:hover{
         background: linear-gradient(130deg, #503bff 0%, #8293ff 100%);
         box-shadow: none;
+        transition: 3s all ease-in-out;
     }
     
     .container-category .box::hover a{
