--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,15 +2,14 @@
     border-radius: 1rem;
     padding: 0.5rem;
     margin-bottom: 10px;
-    width: 250px;
-    height: 250px;
+    width: max-content;
+    height: max-content;
 }
 
 .book {
     display: inline-block;
     width: 175px;
-    max-width: max-content;
-    height: fit-content;
+    height: 310px;
     box-shadow: 0 0 20px #aaa;
     margin: 25px;
     /* padding: 10px 10px 0 10px; */
@@ -32,7 +31,7 @@
   
   .cover {
     display: flex;
-    height: 180px;
+    height: 380px;
     overflow: hidden;
   }
   
