--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,105 +1,81 @@
-.wrapper{
-    border-radius: 1rem;
-    padding: 0.5rem;
-    margin-bottom: 10px;
-    width: max-content;
-    height: max-content;
-}
-
-.book {
-    display: inline-block;
-    width: 175px;
-    height: 310px;
-    box-shadow: 0 0 20px #aaa;
-    margin: 25px;
-    /* padding: 10px 10px 0 10px; */
-    vertical-align: top;
-    transition: height 1s;
-    overflow: hidden;
-    position: relative;
-  }
-  /* star button */
-  /* .book:after {
-    font-family: FontAwesome;
-    content: "\f006";
-    font-size: 35px;
-    position: relative;
-    left: -.1cm;
-    top: -1.6cm;
-    float: right;
-  } */
-  
-  .cover {
-    display: flex;
-    height: 380px;
-    overflow: hidden;
-  }
-  
-  .cover img {
-    width: 100%;
-    margin: auto;
-  }
-  
-  .book p {
-    margin-top: 12px;
-    font-size: 20px;
-  }
-  
-  .book .author {
-    font-size: 15px;
-  }
-
-
-.info h3 {
-    margin: 0;
-    font-size: 18px;
-}
-
-.btn-card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.card-search{
-  margin: 1rem;
-  width: 250px;
-  background-color: brown;
-}
-
-.card-search img{
-  max-width: 100%;
-}
-
-.info .title{
-  margin-top: 10px;
-  text-align: center;
-}
-
-.btn-Modal{
+.testA {
+  width: fit-content;
   display: flex;
-  align-items: center;
-  justify-items: center;
+  flex-wrap: wrap;
+  margin: 50px;
+  justify-content: center;
 }
 
-
-/* .book .description{
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  position: absolute;
-  background-color: #fff;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 1rem;
-  transform: translateY(100%);
-  transition: transform 0.3s ease-in-out;
-  overflow: auto;
-  max-height: 100%;
+.headerA {
+  display: flex;
+  position: relative;
+  width: 240px;
+  cursor: pointer;
 }
 
+.antaraA {
+  display: block;
+  margin: 20px;
+}
 
-.book:hover .description{
-  transform: translateY(0%);
-} */
+.imageA {
+  display: flex;
+}
 
+.imageA img {
+  box-shadow: rgba(71, 72, 74, 0.3) 0px 2px 10px;
+  border-radius: 6px;
+  display: block;
+  width: 100%;
+  height: 300px;
+}
+
+.textA {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  display: -webkit-box;
+  -moz-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  color: rgb(0, 0, 0);
+  margin-top: 8px;
+  cursor: pointer;
+}
+
+.textA p{
+  width:200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.textB {
+  font-family: "Inter", Helvetica;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  letter-spacing: 0px;
+  font-weight: 400;
+  color: rgb(119, 118, 116);
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 5px;
+  overflow-wrap: anywhere;
+  cursor: pointer;
+}
+
+.textB p {
+  font-family: "Inter", Helvetica;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  letter-spacing: 0px;
+  font-weight: 400;
+  color: rgb(119, 118, 116);
+  overflow-wrap: anywhere;
+  width:200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
