--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,6 +13,12 @@
     min-height: 612px;
 }
 
+.horizontal-line {
+    margin-top: 80px;
+    width: 100%;
+}
+
+
 .image-content{
     width: 100%;
     height: auto;
@@ -231,3 +237,13 @@
         width: 100%;
     }
   }
+
+  
+@media only screen and (max-width:600px) {
+    .horizontal-line {
+        margin-top: 5px;
+    }
+  }
+
+
+  
