bug fixing in header

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -113,7 +113,7 @@
 
 .btnLink {
    display: block;
-    width: 100%;
+    width: 130px;
     background: #4E9CAF;
     padding: 5px;
     text-align: center;
